added menu to group

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -167,8 +167,8 @@
                     <div class="btn-group" role="group">
                       <div class="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="repo_group_menu_{id}"><i class="fa fa-bars"></i></div>
                       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="repo_group_menu_{id}">
-                        <div class="dropdown-item edit" data-id="{id}" data-name="{name}"><i class="fa fa-pencil-square-o"></i> Edit</div>
-                        <div class="dropdown-item del" data-id="{id}"><i class="fa fa-trash-o"></i> Remove</div>
+                        <div class="dropdown-item edit" data-id="{id}" data-name="{name}"><i class="fa fa-pencil-square-o"></i></div>
+                        <div class="dropdown-item del" data-id="{id}"><i class="fa fa-trash-o"></i></div>
                       </div>
                     </div>
                   </div>
