fixed dropedown add group menu issue

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -188,7 +188,7 @@
             </article>
           </script>
           <script type="text/html" data-template="groupItem">
-            <div class="dropdown-item" data-id="{id}">
+            <div class="dropdown-item add-repo" data-id="{id}">
               {name}
             </div>
           </script>
@@ -210,7 +210,7 @@
                       <div class="dropdown-item text-primary add-group">
                         <i class="fa fa-plus-circle"></i> Add new group
                       </div>
-                      <div class="dropdown-item text-danger" data-id="0">
+                      <div class="dropdown-item text-danger add-repo" data-id="0">
                         <i class="fa fa-times-circle"></i> Remove from group
                       </div>
                     </div>
