--- a/static/app/index.html
+++ b/static/app/index.html
@@ -303,6 +303,18 @@
     </div>
   </div>
 </section>
+<div class="modal fade confirm-modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-body">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary yes" data-dismiss="modal">Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
 <section class="container donate" hidden>
   <header class="title">
     <h6 class="lang en">Buy <a href="https://twitter.com/unbug" target="_blank">@unbug</a> a drink</h6>
