--- a/static/app/index.html
+++ b/static/app/index.html
@@ -158,15 +158,15 @@
           <div class="empty">
             <div class="top">
               <i class="bookmark-logo fa fa-bookmark fa-5x"></i>
-              <h5>Add GitHub accounts to organize your stars and repositories</h5>
+              <h5>Add GitHub users to organize the stars and repositories</h5>
             </div>
             <div class="input-group form">
-              <input type="text" class="form-control" placeholder="account">
+              <input type="text" class="form-control" placeholder="username">
               <span class="input-group-btn">
                 <button class="btn btn-secondary submit" type="button">Add</button>
               </span>
             </div>
-            <div class="tip text-muted">*e.g. https://github.com/<span class="text-danger">account</span></div>
+            <div class="tip text-muted">*e.g. https://github.com/<span class="text-danger">username</span></div>
           </div>
         </header>
         <section class="bd" role="tablist">
@@ -260,12 +260,12 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h6 class="modal-title">Add GitHub Account</h6>
+        <h6 class="modal-title">Add GitHub User</h6>
       </div>
       <div class="modal-body">
-        <div class="text-muted">*e.g. https://github.com/<span class="text-danger">account</span></div>
+        <div class="text-muted">*e.g. https://github.com/<span class="text-danger">username</span></div>
         <div class="input-group form">
-          <input type="text" class="form-control" placeholder="account">
+          <input type="text" class="form-control" placeholder="username">
           <span class="input-group-btn">
             <button class="btn btn-secondary submit" type="button" data-dismiss="modal">Add</button>
           </span>
