--- a/static/app/index.html
+++ b/static/app/index.html
@@ -48,7 +48,7 @@
           </div>
         </div>
         <form action="javascript:void(0);">
-        <input type="search" name="search" class="form-control" placeholder="New Year 2016 快播">
+        <input type="search" name="search" class="form-control" placeholder="New Year 2016 猴年">
         </form>
         <span class="input-group-btn">
           <button class="btn btn-secondary search" type="button" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Click here to show more">Search</button>
