added plugin links

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -55,6 +55,12 @@
           <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" target="_blank">Issue?</a>
         </span>
       </div>
+      <section class="plugins">
+        <i class="fa fa-hand-o-right"></i>&nbsp;
+        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text">Codelf for Sbulime Text</a>
+        &nbsp;&nbsp;
+        <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan">Codelf Chrome App</a>
+      </section>
     </div>
   </section>
   <section class="row search-relate">
