added plugin links

--- a/static/app/index.html
+++ b/static/app/index.html
@@ -56,9 +56,9 @@
         </span>
       </div>
       <section class="plugins">
-        <i class="fa fa-hand-o-right"></i>&nbsp;
-        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text">Codelf for Sbulime Text</a>
-        &nbsp;&nbsp;
+        <i class="fa fa-hand-o-right"></i>
+        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text">Sbulime Text Plugin</a>
+        &nbsp;
         <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan">Codelf Chrome App</a>
       </section>
     </div>
