--- a/static/app/index.html
+++ b/static/app/index.html
@@ -57,7 +57,7 @@
       </div>
       <section class="plugins">
         <i class="fa fa-hand-o-right"></i>
-        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text" target="_blank">Sbulime Text Plugin</a>
+        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text" target="_blank">Sublime Text Plugin</a>
         &nbsp;
         <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan" target="_blank">Codelf Chrome App</a>
       </section>
