--- a/static/app/index.html
+++ b/static/app/index.html
@@ -10,347 +10,14 @@
   <link rel="shortcut icon" href="resources/images/codelf_logo.png" >
   <link rel="apple-touch-icon" sizes="144x144"  href="resources/images/codelf_logo.png">
   <link rel="apple-touch-icon-precomposed" href="resources/images/codelf_logo.png">
-  <style>
-    @@include("resources/css/font-awesome.min.css")
-    @@include("resources/css/bootstrap.min.css")
-    @@include("resources/css/prettify.css")
-    @@include("resources/css/components.css")
-    @@include("resources/css/style.css")
-  </style>
+  @@include("html/styles.html")
 </head>
 <body ontuchstart="">
-<section class="container main">
-  <header class="main-title">
-    <header><h1><a href="./"><span>C</span><span>O</span><span>D</span><span>E</span><span>L</span><span>F</span></a></h1></header>
-    <h5>Search over projects from GitHub, Bitbucket, Google Code and more to find </h5>
-    <h5><span class="label label-primary">real-world usage</span> <span class="label label-success">variable names</span></h5>
-  </header>
-  <section class="row search-form">
-    <div class="col-xs-12">
-      <div class="input-group">
-        <div class="input-group-btn">
-          <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          </button>
-          <div class="dropdown-menu">
-            <div class="dropdown-item all">
-              All 90 Languages (Reset)
-            </div>
-            <div role="separator" class="dropdown-divider"></div>
-            <script type="text/html">
-              <div class="dropdown-item">
-                <label class="c-input c-checkbox">
-                  <input type="checkbox" value="{id}" {checked}>
-                  <span class="c-indicator"></span>
-                  {language}
-                </label>
-              </div>
-            </script>
-          </div>
-        </div>
-        <form action="javascript:void(0);">
-        <input type="search" name="search" class="form-control" placeholder="New Year 2016 猴年">
-        </form>
-        <span class="input-group-btn">
-          <button class="btn btn-secondary search" type="button" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Click here to show more">Search</button>
-          <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" target="_blank">Issue?</a>
-        </span>
-      </div>
-      <section class="plugins">
-        <i class="fa fa-hand-o-right"></i>
-        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text" target="_blank">Sublime Text Plugin</a>
-        &nbsp;
-        <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan" target="_blank">Codelf Chrome App</a>
-      </section>
-    </div>
-  </section>
-  <section class="row search-relate">
-    <div class="col-xs-12 bd">
-      <script type="text/html">
-        <a class="label label-primary" href="#{val}">{val}</a>
-      </script>
-    </div>
-  </section>
-  <section class="row search-result">
-    <div class="col-xs-12">
-      <div class="jumbotron ct" role="alert">
-        <header class="hd">
-          <div class="loading">
-            <div class="logo"><img class="spinner" src="resources/images/codelf_logo.png"></div>
-          </div>
-          <div class="error">
-            <div class="logo"><a href="./"><img src="resources/images/codelf_logo.png"></a></div>
-            <div class="text-default">Nothing found, try <span class="label label-default">Suggestions</span> :)</div>
-          </div>
-        </header>
-        <section class="bd">
-          <blockquote class="blockquote">
-          <img src="resources/images/twohardtings.jpg">
-        </blockquote>
-          <script type="text/html">
-            <h5 class="variable-wrap" data-id="{id}" data-repo="{repo}" data-val="{val}"><span class="label label-{label_type}" title="{val}">{val}</span></h5>
-          </script>
-        </section>
-      </div>
-    </div>
-  </section>
-</section>
-<section class="modal fade sourcecode-modal modal--fix" tabindex="-1" role="dialog" aria-labelledby="sourcecodeModal" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <div>
-          <div class="btn-group btn-group-sm" role="group">
-            <div class="btn-group" role="group">
-              <button type="button" class="btn btn-primary-outline dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All matched results <span class="label label-danger label-pill match-count">1</span>
-              </button>
-              <div class="dropdown-menu">
-                <script type="text/html">
-                  <div class="dropdown-item">
-                    <button type="button" class="btn btn-primary-outline btn-sm variable-btns__code" data-id="{id}">Codes</button>
-                    <a class="btn btn-primary-outline btn-sm" href="{repo}" target="_blank">Repo</a>
-                    <span class="label label-{label_type}">{lang}</span>
-                  </div>
-                </script>
-              </div>
-            </div>
-          </div>
-          <a class="btn btn-primary-outline btn-sm cur-repo" target="_blank">Repo</a>
-        </div>
-      </div>
-      <div class="modal-body">
-        <header class="hd">
-          <div class="logo"><img class="spinner" src="resources/images/codelf_logo.png"></div>
-        </header>
-        <pre><code class="prettyprint linenums"></code></pre>
-      </div>
-    </div>
-  </div>
-</section>
-<div class="bookmark-btn" data-toggle="tooltip" data-placement="right" title="Organize GitHub stars">
-  <i class="bookmark-logo fa fa-bookmark fa-3x"></i>
-</div>
-<section class="modal fade bookmark-modal modal--fix" tabindex="-1" role="dialog" aria-labelledby="bookmarkModal" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <button class="btn btn-primary-outline btn-sm add-account"><i class="fa fa-plus-circle"></i> GitHub</button>
-        <button class="btn btn-primary-outline btn-sm add-group"><i class="fa fa-plus-circle"></i> Group</button>
-        <div class="btn-group btn-group-sm" role="group">
-          <div class="btn-group" role="group">
-            <button type="button" class="btn btn-primary-outline dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fa fa-tags"></i> Tags
-            </button>
-            <div class="dropdown-menu dropdown-menu-right tag-menu">
-              <div class="dropdown-item">
-                All Tags
-              </div>
-              <div role="separator" class="dropdown-divider"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="modal-body">
-        <header class="hd empty">
-          <div class="loading">
-            <div class="logo"><img class="spinner" src="resources/images/codelf_logo.png"></div>
-          </div>
-          <div class="empty">
-            <div class="top">
-              <i class="bookmark-logo fa fa-bookmark fa-5x"></i>
-              <h5>Add GitHub users to organize the stars and repositories</h5>
-            </div>
-            <div class="input-group form">
-              <input type="text" class="form-control" placeholder="username">
-              <span class="input-group-btn">
-                <button class="btn btn-secondary submit" type="button">Add</button>
-              </span>
-            </div>
-            <div class="tip text-muted">*e.g. https://github.com/<span class="text-danger">username</span></div>
-          </div>
-        </header>
-        <section class="bd" role="tablist">
-          <script type="text/html" data-template="repoGroup">
-            <article class="card repo-group-item" data-id="{id}">
-              <header class="card-header hd" role="tab" id="repo_group_hd_{id}">
-                <a href="#repo_group_list_{id}" data-toggle="collapse" data-parent=".bd" aria-expanded="false" aria-controls="repo_group_list_{id}">{name}</a>
-                &nbsp;<span class="label label-info label-pill count">{itemCount}</span>
-                <div class="pull-xs-right ctrl">
-                  <div class="btn-group btn-group-sm" role="group">
-                    <div class="btn-group" role="group">
-                      <div class="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="repo_group_menu_{id}"><i class="fa fa-bars"></i></div>
-                      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="repo_group_menu_{id}">
-                        <div class="dropdown-item edit" data-id="{id}" data-name="{name}"><i class="fa fa-pencil-square-o"></i></div>
-                        <div class="dropdown-item del" data-id="{id}"><i class="fa fa-trash-o"></i></div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <form class="form-inline pull-xs-right search">
-                  <div class="form-group">
-                    <div class="input-group input-group-sm">
-                      <input type="text" class="form-control" placeholder="search...">
-                      <div class="input-group-addon submit"><i class="fa fa-search"></i></div>
-                    </div>
-                  </div>
-                </form>
-              </header>
-              <section class="card-block repo-list collapse" id="repo_group_list_{id}" role="tabpanel" aria-labelledby="repo_group_hd_{id}">
-                {items}
-              </section>
-            </article>
-          </script>
-          <script type="text/html" data-template="groupItem">
-            <div class="dropdown-item add-repo" data-id="{id}">
-              <span class="label label-default label-pill"><i class="fa fa-check"></i></span> {name}
-            </div>
-          </script>
-          <script type="text/html" data-template="tagItem">
-            <div class="dropdown-item add-repo" data-id="{id}">
-              <span class="label label-pill" style="background:{color};"><i class="fa fa-check"></i></span> {name}
-            </div>
-          </script>
-          <script type="text/html" data-template="tagDot">
-            <span style="color: {color}"><i class="fa fa-circle"></i></span>
-          </script>
-          <script type="text/html" data-template="repoItem">
-            <article class="card repo-item" data-id="{id}" data-repoid="{originRepoId}" data-name="{_full_name}">
-              <div class="card-block">
-                <header class="repo-item__hd"><h6><a href="{html_url}" target="_blank">{full_name}</a></h6></header>
-                <section class="repo-item__bd fix-break-word">{description}</section>
-              </div>
-              <div class="card-footer">
-                <div class="btn-group btn-group-sm group-menu" role="group">
-                  <div class="btn-group" role="group">
-                    <a class="dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">
-                      Add to group
-                    </a>
-                    <div class="dropdown-menu">
-                      {groupItems}
-                      <div role="separator" class="dropdown-divider"></div>
-                      <div class="dropdown-item text-primary add-group">
-                        <i class="fa fa-plus-circle"></i> Add new group
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="btn-group btn-group-sm tag-menu" role="group">
-                  <div class="btn-group" role="group">
-                    <a class="dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">
-                      Add to tag
-                    </a>
-                    <div class="dropdown-menu">
-                      {tagItems}
-                    </div>
-                  </div>
-                </div>
-                <div class="btn-group btn-group-sm tag-dots fade" role="group"></div>
-              </div>
-            </article>
-          </script>
-        </section>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="modal fade bookmark-user-modal" tabindex="-1" role="dialog" aria-labelledby="bookmarkAccountModal" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h6 class="modal-title">Add GitHub User</h6>
-      </div>
-      <div class="modal-body">
-        <div class="text-muted">*e.g. https://github.com/<span class="text-danger">username</span></div>
-        <div class="input-group form">
-          <input type="text" class="form-control" placeholder="username">
-          <span class="input-group-btn">
-            <button class="btn btn-secondary submit" type="button" data-dismiss="modal">Add</button>
-          </span>
-        </div>
-        <section class="list-group user-list">
-          <script type="text/html">
-          <article class="list-group-item user-item" data-id="{id}">
-            <a href="https://github.com/{name}" target="_blank">@{name}</a>
-            <div class="btn-group btn-group-sm pull-xs-right ctrl">
-              <button class="btn btn-secondary btn-sm sync" data-name="{name}" data-dismiss="modal"><i class="fa fa-refresh"></i> Sync</button>
-              <button class="btn btn-secondary btn-sm del" data-id="{id}"><i class="fa fa-trash-o"></i></button>
-            </div>
-          </article>
-          </script>
-        </section>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="modal fade bookmark-group-modal" tabindex="-1" role="dialog" aria-labelledby="bookmarkGroupModal" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h6 class="modal-title">Edit Group</h6>
-      </div>
-      <div class="modal-body">
-        <input type="text" class="form-control" placeholder="Group name">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary submit" data-dismiss="modal">Done</button>
-      </div>
-    </div>
-  </div>
-</section>
-<div class="modal fade confirm-modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog modal-sm">
-    <div class="modal-content">
-      <div class="modal-body">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary yes" data-dismiss="modal">Yes</button>
-      </div>
-    </div>
-  </div>
-</div>
-<section class="container donate" hidden>
-  <header class="title">
-    <h6 class="lang en">Buy <a href="https://twitter.com/unbug" target="_blank">@unbug</a> a drink</h6>
-    <h6 class="lang cn">赞助 <a href="http://weibo.com/unbug/" target="_blank">@听奏</a> 这个月的房租</h6>
-  </header>
-  <div class="bd">
-    <img src="resources/images/wechatpay.jpg" class="wechatpay" title="微信付款"/>
-    <img src="resources/images/zhifubao.png" class="zhifubao" title="支付宝转账"/>
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-      <input type="hidden" name="cmd" value="_s-xclick">
-      <input type="hidden" name="hosted_button_id" value="43H7K8PWR4VV4">
-      <input type="image" class="paypal" src="resources/images/paypal.png" border="0" name="submit" title="Paypal">
-      <img alt="Buy me a beer" border="0" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" width="1" height="1">
-    </form>
-  </div>
-</section>
-<script type="text/html" template="variableMenu">
-  <div class="btn-group-vertical variable-btns" role="group">
-    <button type="button" class="btn btn-secondary"><a href="#{val}">Search</a></button>
-    <button type="button" class="btn btn-secondary"><a href="{repo}" target="_blank">Repo</a></button>
-    <button type="button" class="btn btn-secondary variable-btns__copy" data-clipboard-text="{val}">Copy</button>
-    <button type="button" class="btn btn-secondary variable-btns__code" data-id="{id}" data-val="{val}">Codes <span class="label label-danger label-pill">{count}</span></button>
-  </div>
-</script>
-<!-- http://tholman.com/github-corners/ -->
-<a href="https://github.com/unbug/codelf" class="github-corner" target="_blank" title="Fork me on GitHub"><svg width="60" height="60" viewBox="0 0 250 250" style="fill:#70B7FD; color:#fff; position: absolute; top: 0; border: 0; right: 0;"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a>
-<style>.github-corner svg{ transition: all 1s ease-in-out;}.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0deg)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
-<script src="src/lib/libs.js"></script>
-<script>
-  @@include("src/App.js")
-</script>
+@@include("html/main.html")
+@@include("html/sourcecode.html")
+@@include("html/bookmark.html")
+@@include("html/donate.html")
+@@include("html/components.html")
+@@include("html/scripts.html")
 </body>
 </html>
