--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -34,11 +34,13 @@
           <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" target="_blank">Issue?</a>
         </span>
       </div>
-      <section class="plugins">
-        <i class="fa fa-hand-o-right"></i>
-        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text" target="_blank">Sublime Text Plugin</a>
+      <section class="plugins text-muted">
+        <i class="fa fa-plug"></i>
+        <a class="text-muted" href="https://atom.io/packages/codelf" target="_blank">For Atom</a>
         &nbsp;
-        <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan" target="_blank">Codelf Chrome App</a>
+        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text" target="_blank">For Sublime Text</a>
+        &nbsp;
+        <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan" target="_blank">For Chrome</a>
       </section>
     </div>
   </section>
