--- a/static/app/html/donate.html
+++ b/static/app/html/donate.html
@@ -1,7 +1,7 @@
 <section class="container donate" hidden>
   <header class="title">
-    <h6 class="lang en">Buy <a href="https://twitter.com/unbug" target="_blank">@unbug</a> a drink</h6>
-    <h6 class="lang cn">赞助 <a href="http://weibo.com/unbug/" target="_blank">@听奏</a> 这个月的房租</h6>
+    <h6 class="lang en">Buy <a href="https://twitter.com/unbug" >@unbug</a> a drink</h6>
+    <h6 class="lang cn">赞助 <a href="http://weibo.com/unbug/" >@听奏</a> 这个月的房租</h6>
   </header>
   <div class="bd">
     <img src="resources/images/wechatpay.jpg" class="wechatpay" title="微信付款"/>
