remove target for links

--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -31,16 +31,16 @@
         </form>
         <span class="input-group-btn">
           <button class="btn btn-secondary search" type="button" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Click here to show more">Search</button>
-          <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" >Issue?</a>
+          <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" target="_blank">Issue?</a>
         </span>
       </div>
       <section class="plugins text-muted">
         <i class="fa fa-plug"></i>
-        <a class="text-muted" href="https://atom.io/packages/codelf" >For Atom</a>
+        <a class="text-muted" href="https://atom.io/packages/codelf" target="_blank">For Atom</a>
         &nbsp;
-        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text" >For Sublime Text</a>
+        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text" target="_blank">For Sublime Text</a>
         &nbsp;
-        <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan" >For Chrome</a>
+        <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan" target="_blank">For Chrome</a>
       </section>
     </div>
   </section>
@@ -78,7 +78,7 @@
 <script type="text/html" template="variableMenu">
   <div class="btn-group-vertical variable-btns" role="group">
     <button type="button" class="btn btn-secondary"><a href="#{val}">Search</a></button>
-    <button type="button" class="btn btn-secondary"><a href="{repo}" >Repo</a></button>
+    <button type="button" class="btn btn-secondary"><a href="{repo}" target="_blank">Repo</a></button>
     <button type="button" class="btn btn-secondary variable-btns__copy" data-clipboard-text="{val}">Copy</button>
     <button type="button" class="btn btn-secondary variable-btns__code" data-id="{id}" data-val="{val}">Codes <span class="label label-danger label-pill">{count}</span></button>
   </div>
