--- a/ChromeApp/index.html
+++ b/ChromeApp/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <webview id="Codelf" src="http://unbug.github.io/codelf/" style="width:99%; height: 99%"></webview>
+  <webview id="codelf" src="http://unbug.github.io/codelf/" style="width:99%; height: 99%"></webview>
+  <script src="main.js"></script>
 </body>
 </html>
