--- a/static/app/html/scripts.html
+++ b/static/app/html/scripts.html
@@ -1,4 +1,4 @@
-<script src="src/lib/libs.js"></script>
+<script src="src/lib/all.js"></script>
 <script>
   @@include("src/AppBundle.js")
 </script>
