--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -27,11 +27,11 @@
           </div>
         </div>
         <form action="javascript:void(0);">
-        <input type="search" name="search" class="form-control" placeholder="New Year 2016 猴年">
+        <input type="search" name="search" class="form-control" placeholder="2016 earthquake 元宵节">
         </form>
         <span class="input-group-btn">
           <button class="btn btn-secondary search" type="button" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Click here to show more">Search</button>
-          <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" target="_blank">Issue?</a>
+          <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" target="_blank">WTF?</a>
         </span>
       </div>
       <section class="plugins text-muted">
@@ -53,7 +53,7 @@
   </section>
   <section class="row search-result">
     <div class="col-xs-12">
-      <div class="jumbotron ct" role="alert">
+      <div class="jumbotron ct ct--white" role="alert">
         <header class="hd">
           <div class="loading">
             <div class="logo"><img class="spinner" src="resources/images/codelf_logo.png"></div>
