--- a/static/app/html/sourcecode.html
+++ b/static/app/html/sourcecode.html
@@ -22,7 +22,7 @@
               </div>
             </div>
           </div>
-          <a class="btn btn-primary-outline btn-sm cur-repo" >Repo</a>
+          <a class="btn btn-primary-outline btn-sm cur-repo" target="_blank">Repo</a>
         </div>
       </div>
       <div class="modal-body">
