--- a/static/app/html/sourcecode.html
+++ b/static/app/html/sourcecode.html
@@ -15,7 +15,7 @@
                 <script type="text/html">
                   <div class="dropdown-item">
                     <button type="button" class="btn btn-primary-outline btn-sm variable-btns__code" data-id="{id}">Codes</button>
-                    <a class="btn btn-primary-outline btn-sm" href="{repo}" >Repo</a>
+                    <a class="btn btn-primary-outline btn-sm" href="{repo}" target="_blank">Repo</a>
                     <span class="label label-{label_type}">{lang}</span>
                   </div>
                 </script>
