show more info in searchcode match list hover

--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -30,8 +30,11 @@
         <input type="search" name="search" class="form-control" placeholder="2016 gravitational 引力波">
         </form>
         <span class="input-group-btn">
-          <button class="btn btn-secondary search" type="button" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Click here to show more">Search</button>
-          <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" target="_blank">WTF?</a>
+          <button class="btn btn-secondary search" type="button" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Click here to show more">
+            <i class="fa fa-search normal"></i>
+            <i class="fa fa-search-plus more"></i>
+          </button>
+          <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/issues?q=is%3Aissue+is%3Aclosed" target="_blank"><i class="fa fa-question-circle"></i></a>
         </span>
       </div>
       <section class="plugins text-muted">
