--- a/static/app/html/sourcecode.html
+++ b/static/app/html/sourcecode.html
@@ -13,9 +13,9 @@
               </button>
               <div class="dropdown-menu">
                 <script type="text/html">
-                  <div class="dropdown-item">
-                    <button type="button" class="btn btn-primary-outline btn-sm variable-btns__code" data-id="{id}">Codes</button>
-                    <a class="btn btn-primary-outline btn-sm" href="{repo}" target="_blank">Repo</a>
+                  <div class="dropdown-item" title="{repoName}">
+                    <button type="button" class="btn btn-primary-outline btn-sm variable-btns__code" data-id="{id}" title="{repoFilePath}">Codes</button>
+                    <a class="btn btn-primary-outline btn-sm" href="{repo}" target="_blank" title="{repo}">Repo</a>
                     <span class="label label-{label_type}">{lang}</span>
                   </div>
                 </script>
