--- a/static/app/html/sourcecode.html
+++ b/static/app/html/sourcecode.html
@@ -2,13 +2,13 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" tabindex="-1">
           <span aria-hidden="true">&times;</span>
         </button>
         <div>
           <div class="btn-group btn-group-sm" role="group">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-primary-outline dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <button type="button" class="btn btn-primary-outline dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="-1">
                 All matched results <span class="label label-danger label-pill match-count">1</span>
               </button>
               <div class="dropdown-menu">
@@ -22,7 +22,7 @@
               </div>
             </div>
           </div>
-          <a class="btn btn-primary-outline btn-sm cur-repo" target="_blank">Repo</a>
+          <a class="btn btn-primary-outline btn-sm cur-repo" target="_blank" tabindex="-1">Repo</a>
         </div>
       </div>
       <div class="modal-body">
