--- a/static/app/html/components.html
+++ b/static/app/html/components.html
@@ -1,9 +1,9 @@
 <div class="nav-bar">
-  <div class="bookmark-btn" data-toggle="tooltip" data-placement="left" title="Organize GitHub stars">
+  <div class="bookmark-btn  animated fadeInDown" data-toggle="tooltip" data-placement="left" title="Organize GitHub stars">
     <i class="bookmark-logo fa fa-bookmark fa-2x hidden-md-up"></i>
     <i class="bookmark-logo fa fa-bookmark fa-3x hidden-sm-down"></i>
   </div>
-  <a href="https://github.com/unbug/codelf" class="github-corner"  title="Fork me on GitHub" target="_blank">
+  <a href="https://github.com/unbug/codelf" class="github-corner animated fadeInDown"  title="Fork me on GitHub" target="_blank">
     <i class="fa fa-github-square fa-2x hidden-md-up"></i>
     <i class="fa fa-github-square fa-3x hidden-sm-down"></i>
   </a>
