--- a/static/app/index.html
+++ b/static/app/index.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="resources/images/codelf_logo.png" >
   <link rel="apple-touch-icon" sizes="144x144"  href="resources/images/codelf_logo.png">
   <link rel="apple-touch-icon-precomposed" href="resources/images/codelf_logo.png">
+  <link title="CODELF" type="application/opensearchdescription+xml" rel="search" href="./opensearch.xml">
   @@include("html/styles.html")
 </head>
 <body ontuchstart="">
