--- a/static/app/html/bookmark.html
+++ b/static/app/html/bookmark.html
@@ -163,13 +163,26 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h6 class="modal-title">Edit Group</h6>
+        <h6 class="modal-title">Group</h6>
       </div>
       <div class="modal-body">
-        <input type="text" class="form-control" placeholder="Group name">
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary submit" data-dismiss="modal">Done</button>
+        <div class="text-muted">Edit Group</div>
+        <div class="input-group">
+          <input type="text" class="form-control group-name" placeholder="New group name">
+          <span class="input-group-btn">
+            <button class="btn btn-secondary submit-group" type="button" data-dismiss="modal">Done</button>
+          </span>
+        </div>
+        <hr>
+        <div class="text-muted">Sync Groups & Tags<span class="text-danger"></span></div>
+        <div class="input-group">
+          <input type="text" class="form-control sync-id" placeholder="Sync Id">
+          <span class="input-group-btn">
+            <button class="btn btn-secondary download" type="button" data-dismiss="modal">Download</button>
+            <button class="btn btn-secondary upload" type="button" data-dismiss="modal">Upload</button>
+          </span>
+        </div>
+        <div class="text-danger sync-note">Download with sync id(or "Upload" and get a sync id)</div>
       </div>
     </div>
   </div>
