--- a/static/app/html/bookmark.html
+++ b/static/app/html/bookmark.html
@@ -166,7 +166,7 @@
         <h6 class="modal-title">Group</h6>
       </div>
       <div class="modal-body">
-        <div class="text-muted">Edit Group</div>
+        <div class="text-muted">Edit group</div>
         <div class="input-group">
           <input type="text" class="form-control group-name" placeholder="New group name">
           <span class="input-group-btn">
@@ -174,15 +174,15 @@
           </span>
         </div>
         <hr>
-        <div class="text-muted">Sync Groups & Tags<span class="text-danger"></span></div>
+        <div class="text-muted">Sync (download/upload) groups and tags with a sync id</div>
         <div class="input-group">
-          <input type="text" class="form-control sync-id" placeholder="Sync Id">
+          <input type="text" class="form-control sync-id" placeholder="Sync id">
           <span class="input-group-btn">
             <button class="btn btn-secondary download" type="button" data-dismiss="modal">Download</button>
             <button class="btn btn-secondary upload" type="button" data-dismiss="modal">Upload</button>
           </span>
         </div>
-        <div class="text-danger sync-note">Download with sync id(or "Upload" and get a sync id)</div>
+        <div class="text-danger sync-note">Click "Upload" to upload groups and get a sync id</div>
       </div>
     </div>
   </div>
