--- a/static/app/html/bookmark.html
+++ b/static/app/html/bookmark.html
@@ -187,7 +187,7 @@
       <div class="modal-body">
         <div class="text-muted">Download/upload groups and tags with a sync id</div>
         <input type="text" class="form-control sync-id" placeholder="Sync id">
-        <div class="text-danger sync-note">Click "Upload" to upload groups and get a sync id</div>
+        <div class="text-danger sync-note">First, click "Upload" to backup and get a sync id</div>
       </div>
       <div class="modal-footer">
         <button class="btn btn-secondary download" type="button" data-dismiss="modal"><i class="fa fa-cloud-download"></i> Download</button>
