--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -34,7 +34,7 @@
             <i class="fa fa-search normal"></i>
             <i class="fa fa-search-plus more"></i>
           </button>
-          <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/wiki" target="_blank"><i class="fa fa-question-circle"></i></a>
+          <a class="btn btn-secondary hidden-sm-down help" href="https://github.com/unbug/codelf/wiki" target="_blank"><i class="fa fa-commenting-o"></i></a>
         </span>
       </div>
       <section class="plugins text-muted">
