added lang to repo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <span class="label label-pill" style="background:{color};"><i class="fa fa-check"></i></span> {name}
             </div></script><script type="text/html" data-template="tagDot"><span style="color: {color}"><i class="fa fa-circle"></i></span></script><script type="text/html" data-template="repoItem"><article class="card repo-item" data-id="{id}" data-repoid="{originRepoId}" data-name="{_full_name}" data-repolang="{language}">
               <div class="card-block">
-                <header class="repo-item__hd"><h6><span class="label label-default label-pill count">{language}</span>&nbsp;<a href="{html_url}" target="_blank">{full_name}</a></h6></header>
+                <header class="repo-item__hd"><h6><span class="label label-default label-pill count">{language}</span><a href="{html_url}" target="_blank">{full_name}</a></h6></header>
                 <section class="repo-item__bd fix-break-word">{description}</section>
               </div>
               <div class="card-footer">
