--- a/static/app/html/bookmark.html
+++ b/static/app/html/bookmark.html
@@ -86,7 +86,7 @@
             <span style="color: {color}"><i class="fa fa-circle"></i></span>
           </script>
           <script type="text/html" data-template="repoItem">
-            <article class="card repo-item" data-id="{id}" data-repoid="{originRepoId}" data-name="{_full_name}" data-repolang="{language}">
+            <article class="card repo-item" data-id="{id}" data-repoid="{originRepoId}" data-name="{_full_name}" data-repolang="{language}" data-repostar="{stargazers_count}" data-repostar="{stargazers_count}">
               <div class="card-block">
                 <header class="repo-item__hd"><h6><span class="label label-default label-pill count">{language}</span><a href="{html_url}" target="_blank">{full_name}</a></h6></header>
                 <section class="repo-item__bd fix-break-word">{description}</section>
