--- a/static/app/html/bookmark.html
+++ b/static/app/html/bookmark.html
@@ -50,7 +50,7 @@
                 <div class="pull-xs-right ctrl">
                   <div class="btn-group btn-group-sm" role="group">
                     <div class="btn-group" role="group">
-                      <div class="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="repo_group_menu_{id}"><i class="fa fa-bars"></i></div>
+                      <div class="menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="repo_group_menu_{id}"><i class="fa fa-cog"></i></div>
                       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="repo_group_menu_{id}">
                         <div class="dropdown-item edit" data-id="{id}" data-name="{name}"><i class="fa fa-pencil-square-o"></i></div>
                         <div class="dropdown-item del" data-id="{id}"><i class="fa fa-trash-o"></i></div>
@@ -86,16 +86,16 @@
             <span style="color: {color}"><i class="fa fa-circle"></i></span>
           </script>
           <script type="text/html" data-template="repoItem">
-            <article class="card repo-item" data-id="{id}" data-repoid="{originRepoId}" data-name="{_full_name}" data-repolang="{language}" data-repostar="{stargazers_count}" data-repostar="{stargazers_count}">
+            <article class="card repo-item" data-id="{id}" data-repoid="{originRepoId}" data-name="{_full_name}" data-repolang="{language}" data-repostar="{stargazers_count}" data-repostar="{stargazers_count}" title="{language}">
               <div class="card-block">
-                <header class="repo-item__hd"><h6><span class="label label-default label-pill count">{language}</span><a href="{html_url}" target="_blank">{full_name}</a></h6></header>
+                <header class="repo-item__hd"><h6><span class="label label-default label-pill">{language}</span><span class="label label-default label-pill">{stargazers_count}</span><a href="{html_url}" target="_blank">{full_name}</a></h6></header>
                 <section class="repo-item__bd fix-break-word">{description}</section>
               </div>
               <div class="card-footer">
                 <div class="btn-group btn-group-sm group-menu" role="group">
                   <div class="btn-group" role="group">
                     <a class="dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">
-                      Add to group
+                      Group
                     </a>
                     <div class="dropdown-menu">
                       {groupItems}
@@ -109,7 +109,7 @@
                 <div class="btn-group btn-group-sm tag-menu" role="group">
                   <div class="btn-group" role="group">
                     <a class="dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">
-                      Add to tag
+                      Tag
                     </a>
                     <div class="dropdown-menu">
                       {tagItems}
