added stars to repo

--- a/static/app/html/bookmark.html
+++ b/static/app/html/bookmark.html
@@ -95,7 +95,7 @@
                 <div class="btn-group btn-group-sm group-menu" role="group">
                   <div class="btn-group" role="group">
                     <a class="dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">
-                      Group
+                      Add to group
                     </a>
                     <div class="dropdown-menu">
                       {groupItems}
@@ -109,7 +109,7 @@
                 <div class="btn-group btn-group-sm tag-menu" role="group">
                   <div class="btn-group" role="group">
                     <a class="dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">
-                      Tag
+                      Add to tag
                     </a>
                     <div class="dropdown-menu">
                       {tagItems}
