--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -41,7 +41,7 @@
         <i class="fa fa-plug"></i>
         <a class="text-muted" href="https://atom.io/packages/codelf" target="_blank">For Atom</a>
         &nbsp;
-        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sbulime-text" target="_blank">For Sublime Text</a>
+        <a class="text-muted" href="https://github.com/unbug/codelf#codelf-for-sublime-text" target="_blank">For Sublime Text</a>
         &nbsp;
         <a class="text-muted" href="https://chrome.google.com/webstore/detail/codelf-best-github-stars/jnmjaglhmmcplekpfnblniiammmdpaan" target="_blank">For Chrome</a>
       </section>
