--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -78,6 +78,9 @@
     </div>
   </section>
 </section>
+<section class="react-native-training">
+  <a href="https://www.gitbook.com/book/unbug/react-native-training/details" target="_blank"><i class="fa fa-video-camera" aria-hidden="true"></i> [开源] React Native 开发培训资料和视频</a>
+</section>
 <script type="text/html" template="variableMenu">
   <div class="btn-group-vertical variable-btns" role="group">
     <button type="button" class="btn btn-secondary"><a href="#{val}">Search</a></button>
