--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -27,7 +27,7 @@
           </div>
         </div>
         <form action="javascript:void(0);">
-        <input type="search" name="search" class="form-control" placeholder="Fyerl Joyn">
+        <input type="search" name="search" class="form-control" placeholder="Olympic 奥运">
         </form>
         <span class="input-group-btn">
           <button class="btn btn-secondary search" type="button" data-toggle="tooltip" data-placement="left" data-trigger="manual" title="Click here to show more">
