--- a/static/app/html/main.html
+++ b/static/app/html/main.html
@@ -80,8 +80,8 @@
 </section>
 <section class="notice-link">
   <a class="animated fadeIn" href="https://www.gitbook.com/book/unbug/react-native-training/details" target="_blank"><i class="fa fa-video-camera" aria-hidden="true"></i> [开源] React Native 开发培训资料和视频</a>
-  <a class="animated fadeIn" href="https://unbug.github.io/js-middleware/" target="_blank"><i class="fa fa-bolt" aria-hidden="true"></i> [开源] 让代码易扩展如 ReduxJS </a>
-  <a class="animated fadeIn" href="https://mihtool.com/" target="_blank"><i class="fa fa-code" aria-hidden="true"></i> [免费] 前端性能优化利器</a>
+  <a class="animated fadeIn" href="https://unbug.github.io/js-middleware/" target="_blank"><i class="fa fa-bolt" aria-hidden="true"></i> [开源] 让代码易扩展如 ReduxJS</a>
+  <a class="animated fadeIn" href="https://mihtool.com/" target="_blank"><i class="fa fa-code" aria-hidden="true"></i> [推荐] iOS 上调试和优化页面的免费工具</a>
 </section>
 <script type="text/html" template="variableMenu">
   <div class="btn-group-vertical variable-btns" role="group">
